--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,10 @@
     <meta name="description" content="Davidson College Virtual Tour">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
-    <!--
-    <link rel="manifest" href="site.webmanifest">
-    -->
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
+    <link rel="apple-touch-icon" sizes="180x180" href="https://www.davidson.edu/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://www.davidson.edu/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://www.davidson.edu/favicon-16x16.png">
+    <link rel="shortcut icon" href="{{ 'favicon.ico' | relative_url }}">
 
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 
